--- a/projeto-final.html
+++ b/projeto-final.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="projeto.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/fontawesome-free-6.4.0-web/css/all.css">
     <title>Página Cadastro</title>
   </head>
