--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/fontawesome-free-6.4.0-web/css/all.css">
-    <title>Projeto</title>
+    <title>Pet Lovers</title>
   </head>
   <body>
     <div class="container">
