--- a/projeto-final.html
+++ b/projeto-final.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/fontawesome-free-6.4.0-web/css/all.css">
-    <title>Página Cadastro</title>
+    <title>Obrigado</title>
   </head>
   <body>
     <div class="thanks">
