--- a/projeto 2.html
+++ b/projeto 2.html
@@ -22,7 +22,7 @@
         </aside>
         <main>
           <header>
-            <a href="projeto.html"><i class="fa-solid fa-angle-left"></i></a>
+            <a href="index.html"><i class="fa-solid fa-angle-left"></i></a>
             <h2>Cadastrar seu <span>Animal</span></span></h2>
           </header>
             <form>
