--- a/projeto 2.html
+++ b/projeto 2.html
@@ -41,6 +41,12 @@
                 <input type="text" id="input-age">
               </div>
             </form>
+            <button id="open-modal">Cadastrar Animal</button>
+            <div id="fade" class="hide"></div>
+            <div id="modal" class="hide">
+              <button id="close-modal">Fechar</button>
+              <p>Esse foi um exercício feito por Lucas Barbosa para o Santander Coders 2023</p>
+            </div>
             <div class="actions">
                 <a href="projeto-final.html">Cadastrar Animal</a>
             </div>
