Novo Button Modal

--- a/projeto 2.html
+++ b/projeto 2.html
@@ -47,8 +47,8 @@
               <button id="close-modal">Fechar</button>
               <p>Esse foi um exercício feito por Lucas Barbosa para o Santander Coders 2023</p>
             </div>
-            <div class="actions">
-                <a href="projeto-final.html">Cadastrar Animal</a>
+            <!-- <div class="actions">
+                <a href="projeto-final.html">Cadastrar Animal</a> -->
             </div>
         </main>
     </div>
