--- a/projeto 2.html
+++ b/projeto 2.html
@@ -44,12 +44,15 @@
             <button id="open-modal">Cadastrar Animal</button>
             <div id="fade" class="hide"></div>
             <div id="modal" class="hide">
-              <button id="close-modal">Fechar</button>
-              <p>Esse foi um exercício feito por Lucas Barbosa para o Santander Coders 2023</p>
+              <button id="close-modal">X</button>
+              <img src="./assets/8796369.svg" alt="">
+            <p id="pet-lovs">Pet <span>Lovers</span></p>
+            <p>Esse foi um exercício feito por <span>Lucas Barbosa</span> para o Santander Coders 2023</p>
             </div>
             <!-- <div class="actions">
-                <a href="projeto-final.html">Cadastrar Animal</a> -->
-            </div>
+                <a href="projeto-final.html">Cadastrar Animal</a>
+            </div> -->
+            <script src="./script.js"></script>
         </main>
     </div>
   </body>
