--- a/projeto 2.html
+++ b/projeto 2.html
@@ -34,6 +34,14 @@
                   <option value="">Escolha a raça</option>
                   <option value="">Vira Lata</option>
                   <option value="">Schnauzer</option>
+                  option value="">Labrador</option>
+                  <option value="">Pincher</option>
+                  option value="">Maltês</option>
+                  <option value="">Shi-Tzu</option>
+                  <option value="">Splitz Alemão</option>
+                  <option value="">Bulldog Francês</option>
+                  <option value="">Pittbul</option>
+                  <option value="">Outro</option>
                 </select>
               </div>
               <div class="age">
